--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,6 +7,6 @@
     <title>PHP Server - Langnang Template</title>
   </head>
   <body>
-    <h1>Welcome to use My PHP Server Template</h1>
+    <h1 style="text-align: center">Welcome to use My PHP Server Template</h1>
   </body>
 </html>
